--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "illuminate/support": "^5.3",
     "symfony/expression-language": "^3.1",
-    "fzaninotto/faker": "^1.6"
+    "fzaninotto/faker": "^1.6",
+    "devster/ubench": "^1.2"
   },
   "autoload": {
     "psr-4": {
