--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
     "illuminate/support": "^5.3",
     "symfony/expression-language": "^3.1",
     "fzaninotto/faker": "^1.6",
-    "devster/ubench": "^1.2"
+    "devster/ubench": "^1.2",
+    "geoip2/geoip2": "^2.4"
   },
   "autoload": {
     "psr-4": {
-      "Samcrosoft\\CreativeAutoSend\\": "autosend_rules/classes/"
+      "Samcrosoft\\CreativeAutoSend\\": "autosend_rules/classes/",
+      "Samcrosoft\\GeoBuzz\\": "geobuzz/"
     }
   }
 }
